# Pyjion

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeOptimizations.txt  CMakeSettings.json  Dockerfile  Dockerfile.manylinux  MANIFEST.in  README.md  dump.raw  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/: Dockerfile.manylinux  build-manylinux.sh
.github/workflows/: benchmark.yml  codeql-analysis.yml  maintenance.yml  master.yml  profile.yml
Docs/: requirements-doc.txt
Docs/source/: api.rst  building.rst  conf.py  gettingstarted.rst  index.rst  optimizations.rst  using.rst  wsgi.rst
Docs/source/opt/: opt-1.rst  opt-10.rst  opt-11.rst  opt-12.rst  opt-13.rst  opt-14.rst  opt-15.rst  opt-16.rst  opt-2.rst  opt-3.rst  opt-4.rst  opt-5.rst  opt-6.rst  opt-7.rst  opt-8.rst  opt-9.rst
Tests/: Tests.cpp  base.py  hello.py  python_bad_tests.txt  python_smoke_tests.txt  python_tests.txt  python_tests_macos10.txt  python_tests_macos11.txt  python_tests_win.txt  requirements_test.txt  run_libregr_tests.py  run_smoke_tests.py  runlibregr.py  test_async.py  test_attr.py  test_basics.cpp  test_big_build.cpp  test_binary.py  test_class.cpp  test_class.py  test_compiler.cpp  test_coro.cpp  test_dict.py  test_dis.py  test_emission.cpp  test_exceptions.cpp  test_flask.py  test_floats.py  test_functions.py  test_generators.py  test_globals.py  test_graph.cpp  test_graph.py  test_ilgen.cpp  test_imports.py  test_inference.cpp  test_info.py  test_interns.py  test_iterators.py  test_lists.py  (+26 more)
Tests/benchmarks/: test_chaos.py  test_deltablue.py  test_django_template.py  test_fannkuch.py  test_float.py  test_microbenchmarks.py  test_nbody.py  test_nqueens.py  test_spectralnorm.py  test_xml_etree.py
eng/: CMakeOptimizations.txt  CMakeProfiling.txt
eng/profiles/: clang.profraw  macos11.profdata  macos11.profraw
pyjion/: __init__.py  helpers.S  intrins.cpp  jitinfo.h  pyjit.cpp
src/pyjion/: __init__.py  __init__.pyi  __main__.py  absint.cpp  absint.h  absvalue.cpp  absvalue.h  binarycomp.cpp  block.h  bytecodeoperation.cpp  bytecodeoperation.h  cee.h  codemodel.cpp  codemodel.h  dis.py  exceptionhandling.cpp  exceptionhandling.h  exceptions.h  helpers.asm  ilgen.h  instructions.cpp  instructions.h  intrins.cpp  intrins.h  intstate.h  ipycomp.h  jitinfo.h  jitinit.h  knownmethods.h  pgocodeprofile.cpp  pgocodeprofile.h  pycomp.cpp  pycomp.h  pyjit.cpp  pyjit.h  pyjitallocator.cpp  pyjitallocator.h  pyjitmath.cpp  pyjitmath.h  stack.cpp  (+6 more)
