[build-system]
requires = ["setuptools", "wheel", "scikit-build @ https://github.com/tonybaloney/scikit-build/archive/vs2019.zip", "cmake", "ninja"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39

[testenv]
deps = scikit-build

commands =
    python Tests/test_pyjion.py -f Tests/python_smoke_tests.txt -j4
"""